--- a/system/app/Widgets/Quote/views/title.quote.phtml
+++ b/system/app/Widgets/Quote/views/title.quote.phtml
@@ -1,5 +1,5 @@
 <?php if($this->editAllowed): ?>
-	<input type="text" name="quoteTitle" id="quote-title" value="<?php echo $this->title; ?>" />
+	<?php echo $this->formText('quoteTitle', $this->title, array('id' => 'quote-title')); ?>
 <?php else: ?>
 	<h2><?php echo $this->title; ?></h2>
 <?php endif; ?>
