- quote plugin styles update

--- a/system/app/Widgets/Quote/views/search.quote.phtml
+++ b/system/app/Widgets/Quote/views/search.quote.phtml
@@ -1,6 +1,8 @@
 <?php $this->headStyle()->captureStart() ?>
 	.ui-autocomplete {
 	    background: rgba(204, 204, 204, 0.85);
+		height: 400px;
+		overflow: auto;
 	}
 	.ui-menu-item {
     	border-bottom: 1px dashed #eee;
