- quote plugin fixes and updates

--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -1,5 +1,5 @@
 <div class="quote-controlls">
-	<a data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/products/" data-pheight="554" href="javascript:;" class="save-quote quote-controll tpopup"><?php echo $this->translate('Add product'); ?></a>
+	<a data-qid="<?php echo $this->quoteId; ?>" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/products/" data-pheight="554" href="javascript:;" class="save-quote quote-controll tpopup"><?php echo $this->translate('Add product'); ?></a>
 	<a href="javascript:;" data-qid="<?php echo $this->quoteId; ?>" data-sendmail="0" class="save-quote quote-controll"><?php echo $this->translate('Save quote'); ?></a>
 	<a href="javascript:;" id="save-and-send-quote" data-qid="<?php echo $this->quoteId; ?>" data-sendmail="1" class="save-quote quote-controll"><?php echo $this->translate('Save and Send quote'); ?></a>
 </div>
