config screen updated

--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -1,3 +1,10 @@
-<div id="quote-settings" class="ui-widget-content ui-helper-clearfix h450 grid_12" style="overflow-x: hidden; overflow-y: auto;">
+<div id="quote-settings" class="ui-widget clearfix">
     <?php echo $this->form; ?>
 </div>
+<style>
+#applySettings {
+	position: absolute;
+	bottom: 5px;
+	right: 0;
+}
+</style>
