--- a/system/app/Widgets/Quote/views/date.quote.phtml
+++ b/system/app/Widgets/Quote/views/date.quote.phtml
@@ -5,10 +5,9 @@
 		array(
 			'defaultDate' => '',
 			'onClose'    => new Zend_Json_Expr('function() {saveQuote($(".save-quote:first").data("qid"), false);}')
-		),
-		array(
-			'style' => 'width:95px !important; border-radius:2px;'
-		));
+		), array(
+            'class' => 'quote-edit-input'
+        ));
 	?>
 <?php else: ?>
 	<?php echo date('M j, Y', strtotime($this->date)); ?>
