--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -1,10 +1,6 @@
+<?php
+    $this->placeholder('headerContent')->set($this->translate('Quote system settings'));
+?>
 <div id="quote-settings" class="ui-widget clearfix">
     <?php echo $this->form; ?>
 </div>
-<style>
-#applySettings {
-	position: absolute;
-	bottom: 5px;
-	right: 0;
-}
-</style>
