Major quote plugin upgrade

--- a/system/app/Widgets/Quote/views/controls.quote.phtml
+++ b/system/app/Widgets/Quote/views/controls.quote.phtml
@@ -1,6 +1,6 @@
 <div class="quote-controlls">
 	<!-- add product to quote controll -->
-    <a data-qid="<?php echo $this->quoteId; ?>" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/" data-pheight="554" href="javascript:;" class="quote-control tpopup">
+    <a data-qid="<?php echo $this->quoteId; ?>" data-url="<?php echo $this->websiteUrl;?>plugin/quote/run/product/qid/<?php echo $this->quoteId; ?>" data-pheight="554" href="javascript:;" class="quote-control tpopup">
         <?php echo $this->translate('Add product'); ?>
     </a>
 
