--- a/system/app/Widgets/Quote/views/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/options.quote.item.phtml
@@ -10,7 +10,7 @@
 
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
-	<a href="javascript:;" data-pwidth="600" data-pheight="404" class="tpopup" data-url="<?php echo $this->websiteHelper; ?>plugin/quote/run/options/pid/<?php echo $this->pid;?>">
+	<a href="javascript:;" data-pwidth="600" data-pheight="404" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/qid/<?php echo $this->qid; ?>/pid/<?php echo $this->pid;?>">
 		<strong><?php echo $this->translate('Manage options'); ?></strong>
 	</a>
 <?php endif; ?>
