fixed: date formatting in the grid rows

--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->placeholder('headerContent')->set('Add products to the quote&nbsp|&nbsp;Search: ' . $this->formText('search', '', array('placeholder' => 'search products')));
+    $this->placeholder('headerContent')->set('Select 1 or more products&nbsp|&nbsp;Search: ' . $this->formText('search', '', array('placeholder' => 'search products')));
     $this->placeholder('extraClasses')->set('refreshOnClose');
     $this->placeholder('containerId')->set('products-container');
 ?>
