--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -9,12 +9,17 @@ $(document).ready(function(){
 
     $(document).on("click", "#applySettings", function(e){
           e.preventDefault();
+          if($('#auto-quote').attr("checked")){
+              var autoQuote = 1;
+          }else{
+              var autoQuote = 0;
+          }
           $.ajax({
             type: "POST",
             url: '<?php echo $this->websiteUrl;?>plugin/quote/run/settings/',
             dataType: "json",
             data: {
-                autoQuote: $('#auto-quote').val(),
+                autoQuote: autoQuote,
                 quoteTemplate: $('#quote-template option:selected').val(),
                 expirationDelay: $('#expiration-delay').val()
             },
