--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -3,7 +3,7 @@
     <td><input type="checkbox" class="quote-grid-row-checkbox" id="<%= id %>" <% if (this.model.get('checked')) {%>checked="checked"<% }%> /></td>
     <td><%= id %></td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html"><%= title %></a></td>
-    <td><%= $.datepicker.formatDate('dd M, yy', new Date(Date.parse(createdAt.replace(/\-/g, '/')))) %></td>
+    <td><%= $.datepicker.formatDate('M d, yy', new Date(Date.parse(createdAt.replace(/\-/g, '/')))) %></td>
     <td>
         <select name="quoteStatus" class="quote-status" id="<%= id %>">
             <option value="new" <% if (status == 'new') { %> selected="selected" <% } %>>New</option>
@@ -34,10 +34,10 @@
                 </tr>
                 <tr>
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
-                    <th><?php echo $this->translate('Id'); ?></th>
-                    <th><?php echo $this->translate('Title'); ?></th>
-                    <th><?php echo $this->translate('Date'); ?></th>
-                    <th><?php echo $this->translate('Status'); ?></th>
+                    <th data-sort="id" class="sortable"><?php echo $this->translate('Id'); ?></th>
+                    <th data-sort="title" class="sortable"><?php echo $this->translate('Title'); ?></th>
+                    <th data-sort="created_at" class="sortable"><?php echo $this->translate('Date'); ?></th>
+                    <th data-sort="status" class="sortable"><?php echo $this->translate('Status'); ?></th>
                     <th><?php echo $this->translate('Preview'); ?></th>
                     <th><?php echo $this->translate('Remove'); ?></th>
                 </tr>
@@ -88,3 +88,6 @@
         });
     </script>
 <?php endif; ?>
+<style type="text/css">
+    .sortable {cursor: pointer;}
+</style>
