--- a/web/js/modules/product/templates/productItem.html
+++ b/web/js/modules/product/templates/productItem.html
@@ -1,5 +1,5 @@
 <p class="brand"><%= brand %></p>
-<img class="lazy" src="" data-original="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" alt="<%= name %>" />
+<img class="lazy" src="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" data-original="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" alt="<%= name %>" />
 <p class="name"><%= name %></p>
 <p class="sku"><%= sku %></p>
-<p><input type="checkbox" data-pid="<%= id %>" class="in-quote"/></p>
+<p><input type="checkbox" data-pid="<%= id %>" <% if((typeof (checked) != 'undefined') && checked) { %> checked="checked" <% } %> class="in-quote"/></p>
