Improved quote form validation

--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -6,7 +6,7 @@
     $(function() {
         $('#state').empty().parent('div').hide();
 
-        $(document).on('submit', '#plugi-quote-quoteform', function(e) {
+        $(document).on('submit', '#plugin-quote-quoteform', function(e) {
             e.preventDefault();
 
             //validate reuired fields firs
